force-app/main/default/objects/Donation_Payment__c/Donation_Payment__c.object-meta.xml
<CustomObject>
    <label>Donation</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Donation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>