force-app/main/default/objects/Donation_Payment__c/fields/Email_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Email_Receipt__c</fullName>
    <label>Send Email Receipt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>