force-app/main/default/objects/Donation_Payment__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Pledge Name</inlineHelpText>
    <label>Member</label>
    <referenceTo>Pledge__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>