force-app/main/default/objects/Donation_Payment__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>200</length>
    <type>Text</type>
</CustomField>