force-app/main/default/objects/Donation_Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zelle</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Soft Credit</fullName>
            </value>
            <value>
                <fullName>NonMonetary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>