force-app/main/default/objects/Donation_Payment__c/fields/SoftCreditMember__c.field-meta.xml
<CustomField>
    <fullName>SoftCreditMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Soft Credit Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations2</relationshipName>
    <type>Lookup</type>
</CustomField>