force-app/main/default/objects/Donation_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Amount__c</columns>
    <columns>Member__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>SoftCreditMember__c</columns>
    <columns>Status__c</columns>
    <columns>Note__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Date__c</field>
        <operation>greaterThan</operation>
        <value>4/20/2023</value>
    </filters>
    <label>All</label>
</ListView>